# LAR_NAO_SPL

Menu/: menu.py
Pateador/: Actuador_Patada.py  Calculo_Pos_Pelota.py  Patada.py  PelotaModule.py  Prepara_Patada.py  README.md  caminata.py  metodos_num.py  punto_golpe.py
Portero/: README.md  direction.py  portero_prueba.py  posicionPelota.py
VisualCompass/: CMakeLists.txt  main.cpp  qiproject.xml  test.py  visualcompass.cpp  visualcompass.h
VisualCompassLocal/: CMakeLists.txt  main.cpp  visualcompass.cpp
docs/: conf.py  index.rst
visualcompasslocal/local/: qiproject.xml  visualcompass.cpp  visualcompass.h
walk_tests/: compass_no_correction.py  compass_with_correction.py
walk_tests/goalie_tests/: goalie_test.py
